--- a/login.html
+++ b/login.html
@@ -124,6 +124,9 @@
     <br />
                             <div id="msg" style="color:red" ></div>
     <br /><br />
+                          New Users, Register / Activate your account on our website - www.gdnonline.com and login.
+                          <br /><br />
+
                         </div>
 
 
