--- a/details.html
+++ b/details.html
@@ -197,7 +197,7 @@
                 </li>                
                  
                 <li><a onclick="javascript:window.location.href='section.html?secid=health'"><i class="fa fa-male"></i> Health<i ></i></a></li>
-                <li><a onclick="javascript:window.location.href='section.html?secid=tech talk'"><i class="fa fa-apple"></i> Tech Talk<i ></i></a></li>
+                <li><a onclick="javascript:window.location.href='section.html?secid=tech talk'"><i class="fa fa-laptop"></i> Tech Talk<i ></i></a></li>
                 <li><a onclick="javascript:window.location.href='section.html?secid=motoring'"><i class="fa fa-dashboard"></i> Motoring<i  ></i></a></li>
                 <li><a onclick="javascript:window.location.href='section.html?secid=omg'"><i class="fa fa-warning"></i> OMG!<i ></i></a></li>
           <li><a onclick="javascript:window.location.href='section.html?secid=cinema'"><i class="fa fa-film"></i> Cinema<i ></i></a></li>
